--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@docusaurus/module-type-aliases": "2.0.1",
     "@tsconfig/docusaurus": "^1.0.5",
     "antd": "^4.22.3",
+    "axios": "^0.27.2",
     "typescript": "^4.7.4"
   },
   "browserslist": {
