--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@tsconfig/docusaurus": "^1.0.5",
     "antd": "^4.22.3",
     "axios": "^0.27.2",
+    "dayjs": "^1.11.4",
     "typescript": "^4.7.4"
   },
   "browserslist": {
