--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
     "build": "docusaurus build",
+    "dep": "docusaurus build && node ./dep",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
     "clear": "docusaurus clear",
@@ -29,6 +30,8 @@
     "antd": "^4.22.3",
     "axios": "^0.27.2",
     "dayjs": "^1.11.4",
+    "ora": "^6.1.2",
+    "scp2": "^0.5.0",
     "typescript": "^4.7.4"
   },
   "browserslist": {
