--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "antd": "^4.22.3",
     "axios": "^0.27.2",
     "dayjs": "^1.11.4",
+    "lodash": "^4.17.21",
     "ora": "^5.1.0",
     "scp2": "^0.5.0",
     "typescript": "^4.7.4"
