--- a/service-node/package.json
+++ b/service-node/package.json
@@ -6,16 +6,18 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
+    "connect-redis": "^6.1.3",
+    "cookie-parser": "~1.4.6",
     "dayjs": "^1.11.4",
+    "express-session": "^1.17.3",
     "mysql2": "^2.3.3",
+    "redis": "^3.0.0",
     "sequelize": "^6.21.3"
   }
 }
