--- a/service-node/package.json
+++ b/service-node/package.json
@@ -1,23 +1,49 @@
 {
-  "name": "service-node",
-  "version": "0.0.0",
-  "private": true,
+  "name": "my-website-ts-admin",
+  "version": "1.0.0",
+  "description": "my-website-admin",
+  "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "dev": "ts-node-dev --respawn --transpile-only ./src/app.ts"
   },
+  "author": "Jeffrey",
+  "license": "ISC",
   "dependencies": {
-    "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "bcrypt": "^5.0.1",
+    "config": "^3.3.6",
+    "cors": "^2.8.5",
+    "dayjs": "^1.10.7",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
+    "mysql2": "^2.3.3",
+    "nanoid": "^3.1.30",
+    "pino": "^7.0.2",
+    "pino-pretty": "^7.1.0",
+    "prom-client": "^14.0.0",
+    "response-time": "^2.3.2",
+    "sequelize": "^6.21.3",
+    "swagger-jsdoc": "^6.1.0",
+    "swagger-ui-express": "^4.1.6",
+    "zod": "^3.9.8"
   },
   "devDependencies": {
-    "connect-redis": "^6.1.3",
-    "cookie-parser": "~1.4.6",
-    "dayjs": "^1.11.4",
-    "express-session": "^1.17.3",
-    "mysql2": "^2.3.3",
-    "redis": "^3.0.0",
-    "sequelize": "^6.21.3"
+    "@types/bcrypt": "^5.0.0",
+    "@types/body-parser": "^1.19.1",
+    "@types/config": "^0.0.39",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.5",
+    "@types/lodash": "^4.14.175",
+    "@types/nanoid": "^3.0.0",
+    "@types/node": "^16.11.1",
+    "@types/pino": "^6.3.11",
+    "@types/response-time": "^2.3.5",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.4.4"
   }
 }
