--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
     "typecheck": "tsc",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@docusaurus/core": "2.0.1",
@@ -35,7 +36,8 @@
     "lodash": "^4.17.21",
     "ora": "^5.1.0",
     "scp2": "^0.5.0",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "husky": "^8.0.0"
   },
   "browserslist": {
     "production": [
