--- a/service-node/package.json
+++ b/service-node/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only ./src/app.ts",
-    "build": "unbuild"
+    "build": "unbuild",
+    "build:tsc": "tsc"
   },
   "author": "Jeffrey",
   "license": "ISC",
