--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "docusaurus": "docusaurus",
-    "start": "docusaurus start",
+    "start": "docusaurus start --port 3130",
     "build": "docusaurus build",
     "dep": "docusaurus build && node ./dep",
     "swizzle": "docusaurus swizzle",
